--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,3 +15,13 @@ html {
 body {
     font-size: 1.6rem;
 }
+
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
