--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,6 +8,16 @@ a {
     text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
 html {
     font-size: 62.5%;
 }
